--- a/spiderweb/app/views/ourwords/about.html
+++ b/spiderweb/app/views/ourwords/about.html
@@ -3,7 +3,7 @@
     <img class="top-image" src="images/ps-floater.jpg" />
     <h1>About</h1>
     <p>Parallel Spider is a tool for website analysis and comparison.  The system allows individuals with non-technical backgrounds to perform advanced data analysis tasks on websites:  What words are used?  How are those words used?  What sites are linked to? How do two or more sites compare? and more…</p>
-    <p>We can’t tell you exactly how to use Parallel Spider.  The answer to that question depends upon what interests you and what you want to discover.  Parallel Spider is designed to be a general tool.   A tool to help people reach insights into the worlds that matter to them on that wide web called the Internet.</p>
+    <p>We can’t tell you exactly how to use Parallel Spider.  The answer to that question depends upon what interests you and what you want to discover.  Parallel Spider is designed to be a general tool.   A tool to help you reach insights into the worlds that matter to you on that wide web called the Internet.</p>
   </div>
   <h2>Plot Points</h2>
   <div id="fast" class="autoscroll">&nbsp;</div>
