Added loading display to splashdown page for result fetches.

--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -741,6 +741,12 @@
   margin-left: 38%;
 }
 
+.loading {
+  text-align: center;
+  padding-top: 100px;
+  width: 500px;
+}
+
 // SUBVIEW SIDE NAVIGATION
 //////////////////////////
 .side-nav {
