Retargeting Analysis Engine, let the fun begin.

--- a/spiderweb/app/views/ourwords/about.html
+++ b/spiderweb/app/views/ourwords/about.html
@@ -8,10 +8,10 @@
   <h2>Plot Points</h2>
   <div id="fast" class="autoscroll">&nbsp;</div>
   <h3>Fast</h3>
-  <p>Instead of one computer to download and analyze the data, Parallel Spider uses 20 computers for each crawl.  Why don’t we use even more?  Do be a good citizen on the net, we only download 20 pages per second from the websites being analyzed.  This download rate still allows the system to analyze over a thousand pages per minute, and is much better than a single computer solution.  A five-thousand-page site can be completely analyzed in less than 5 minutes.</p>
+  <p>Instead of one computer to download and analyze the data, Parallel Spider uses 20 computers for each crawl.  Why don’t we use even more?  To be a good citizen on the net, we only download 20 pages per second from the websites being analyzed.  This download rate still allows the system to analyze over a thousand pages per minute, and is much better than a single computer solution.  A five-thousand-page site can be completely analyzed in less than 5 minutes.</p>
   <div id="easy" class="autoscroll">&nbsp;</div>
   <h3>Easy</h3>
-  <p>Just select the analysis options you want and the sites you wish to crawl.  No need to use XPATH or CSS selectors unless you want.  No need to download anything.  Just a few clicks and your off on your very own crawl.  We even provide visualizations to help you understand the data and to help you convey that understanding to other.</p>
+  <p>Just select the analysis options you want and the sites you wish to crawl.  No need to use XPATH or CSS selectors unless you want.  No need to download anything.  Just a few clicks and your off on your very own crawl.  We even provide visualizations to help you understand the data and to help you convey that understanding to others.</p>
   <div id="free" class="autoscroll">&nbsp;</div>
   <h3>Free</h3>
   <p>Parallel Spider has a free tier of usage.  Learn the system, see if you like it, or just use it for a few things and be done with it.  Beyond the beginning free tier, prices are cheap.  Analyze 10,000 pages for less than a dollar.  Different options cost pennies.  Only pay for what you use.</p>
