--- a/spiderweb/app/views/ourwords/contact.html
+++ b/spiderweb/app/views/ourwords/contact.html
@@ -1,5 +1,5 @@
 <div style="text-align: center; margin-top: 5%">
   <img src="images/ps-contact.jpg">
-  <p style="width: 400px; margin: 20px auto; font-size: 18px;">It scares us to.  We'll have a nicer, friendlier contact page up soon.  Till then...<br /><br /> SIGINT: info@parallelspider.com. </p>
+  <p style="width: 400px; margin: 20px auto; font-size: 18px;">It scares us to.  We'll have a nicer, friendlier contact page up soon.  Till then...<br /><br /> SIGINT: scott@parallelspider.com. </p>
 </div>
 
