Reformatted analysis time so no milliseconds.

--- a/spiderweb/app/views/splashdown/summary.html
+++ b/spiderweb/app/views/splashdown/summary.html
@@ -5,7 +5,7 @@
       <td><h4>{{summary.totalPages}}</h4></td>
       <td>&nbsp;</td> 
       <td><h4>Analsyis Time:</h4></td> 
-      <td><h4>{{summary.minutes}}m {{summary.seconds | integer}}s</h4></td>
+      <td><h4>{{summary.minutes}} minutes {{summary.seconds | number:0}} seconds</h4></td>
     </tr>
     <tr>
       <td><h4>Total Words:</h4></td> 
