Fixed timing from clock() to time(), also, total words seems to work now?

--- a/spiderweb/app/views/splashdown/summary.html
+++ b/spiderweb/app/views/splashdown/summary.html
@@ -33,7 +33,7 @@
       </tr>
       <tr>
         <td><h4>Total Words:</h4></td> 
-        <td><h4>{{site[results].summary.words.count}}</h4></td>
+        <td><h4>{{site[results].summary.words.count | number:0}}</h4></td>
         <td>&nbsp;</td> 
         <td><h4>Internal Links:</h4></td> 
         <td><h4>{{site[results].summary.links.internal/totalLinks*100 | number:1}}%</h4></td>
