Fixed tags display on summary page of Spider Web.  Still have a bug with the total words not displaying.

--- a/spiderweb/app/styles/main.scss
+++ b/spiderweb/app/styles/main.scss
@@ -621,8 +621,9 @@ body {
 
 .tag-pane {
   background-color: white;
-  height: 200px;
+  height: 300px;
   text-align: left;
+  overflow-y: scroll;
 
   .tag {
     width: 50%;
